# ur_test

./: CMakeLists.txt  README.md  package.xml
controller/: gripper.yaml
examples/pick_place/: CMakeLists.txt
examples/pick_place/src/: .pick_place.cpp.swp  pick_place.cpp
examples/simple_planning/: CMakeLists.txt
examples/simple_planning/src/: ur5_test.cpp
launch/: ur10_test.launch  ur10_test_upload.launch  ur10_upload.launch  ur5.launch  ur5_upload.launch
robot_description/: arm_extras_ur10.urdf.xacro  kinect.urdf.xacro  r2d2_gripper.urdf.xacro  ur10_robot_test.urdf.xacro  ur5_robot_vacuum.urdf.xacro  vacuum_gripper.urdf.xacro
src/: ur5_test.cpp
